<resources>
    <string name="app_name">MultipleViews</string>
    
    <string name="google_maps_API_key">AIzaSyBFkU64-7WnmXnjKlXveo2KhKi8lUbzBNg</string>

    <string name="find_device_location">Find Current Device Location</string>
    
    <string name="enter_lat">Enter Latitude</string>

    <string name="enter_long"> Enter Longitude</string>

    <string name="show_coordinates">Find Coordinate location</string>

    <string name="url_et">Enter URL</string>

    <string name="image_button">Press To See Image</string>

</resources>
